cr-examples/mlir-tosa/lib/mlir_tosa_c_api.h

typedef struct MLIRFunction_* MLIRFunctionHandle;
typedef struct MLIRValue_* MLIRValueHandle;
typedef struct MLIRType_* MLIRTypeHandle;
/* Result codes */
typedef enum {
    MLIR_SUCCESS = 0,
    MLIR_ERROR_INVALID_PARAMETER = 1,
    MLIR_ERROR_VERIFICATION_FAILED = 2,
    MLIR_ERROR_FILE_IO = 3,
    MLIR_ERROR_INTERNAL = 4
} MLIRResultCode;
/**
 * TOSA Reduce Max operation.
 * Reduces the input tensor along the specified axis using max.
 *
 * @param function Function handle
 * @param input Input tensor
 * @param axis Axis to reduce along
 * @param resultType Result tensor type
 * @return Result value handle
 */
MLIRValueHandle mlir_tosa_reduce_max(MLIRFunctionHandle function,
                                      MLIRValueHandle input,
                                      int64_t axis,
                                      MLIRTypeHandle resultType);
/**
 * TOSA Const operation.
 * Creates a constant tensor with embedded float32 data.
 *
 * @param function Function handle
 * @param data Raw float32 data array
 * @param numElements Number of elements in data array
 * @param shape Tensor shape dimensions
 * @param numDims Number of dimensions in shape
 * @param resultType Result tensor type (must match shape and f32 element type)
 * @return Value handle for the constant tensor
 */
MLIRValueHandle mlir_tosa_const_f32(MLIRFunctionHandle function,
                                     const float* data,
                                     size_t numElements,
                                     const int64_t* shape,
                                     size_t numDims,
                                     MLIRTypeHandle resultType);
/* Function finalization */
MLIRResultCode mlir_function_add_return(MLIRFunctionHandle function,
                                        MLIRValueHandle* values,
                                        size_t numValues);
/* Value operations */
void mlir_value_destroy(MLIRValueHandle value);
/* Error handling */
const char* mlir_get_last_error(void);