cr-examples/mlir-tosa/src/main/java/mlir/tosa/bindings/mlir_tosa_c_api_h.java


    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_reduce_max(MLIRFunctionHandle function, MLIRValueHandle input, int64_t axis, MLIRTypeHandle resultType)
     * }
     */
    public static FunctionDescriptor mlir_tosa_reduce_max$descriptor() {
        return mlir_tosa_reduce_max.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_reduce_max(MLIRFunctionHandle function, MLIRValueHandle input, int64_t axis, MLIRTypeHandle resultType)
     * }
     */
    public static MethodHandle mlir_tosa_reduce_max$handle() {
        return mlir_tosa_reduce_max.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_reduce_max(MLIRFunctionHandle function, MLIRValueHandle input, int64_t axis, MLIRTypeHandle resultType)
     * }
     */
    public static MemorySegment mlir_tosa_reduce_max$address() {
        return mlir_tosa_reduce_max.ADDR;
    }

    /**
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_reduce_max(MLIRFunctionHandle function, MLIRValueHandle input, int64_t axis, MLIRTypeHandle resultType)
     * }
     */
    public static MemorySegment mlir_tosa_reduce_max(MemorySegment function, MemorySegment input, long axis, MemorySegment resultType) {
        var mh$ = mlir_tosa_reduce_max.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("mlir_tosa_reduce_max", function, input, axis, resultType);
            }
            return (MemorySegment)mh$.invokeExact(function, input, axis, resultType);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class mlir_tosa_const_f32 {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_LONG,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_LONG,
            mlir_tosa_c_api_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("mlir_tosa_const_f32");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_const_f32(MLIRFunctionHandle function, const float *data, size_t numElements, const int64_t *shape, size_t numDims, MLIRTypeHandle resultType)
     * }
     */
    public static FunctionDescriptor mlir_tosa_const_f32$descriptor() {
        return mlir_tosa_const_f32.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_const_f32(MLIRFunctionHandle function, const float *data, size_t numElements, const int64_t *shape, size_t numDims, MLIRTypeHandle resultType)
     * }
     */
    public static MethodHandle mlir_tosa_const_f32$handle() {
        return mlir_tosa_const_f32.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_const_f32(MLIRFunctionHandle function, const float *data, size_t numElements, const int64_t *shape, size_t numDims, MLIRTypeHandle resultType)
     * }
     */
    public static MemorySegment mlir_tosa_const_f32$address() {
        return mlir_tosa_const_f32.ADDR;
    }

    /**
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_const_f32(MLIRFunctionHandle function, const float *data, size_t numElements, const int64_t *shape, size_t numDims, MLIRTypeHandle resultType)
     * }
     */
    public static MemorySegment mlir_tosa_const_f32(MemorySegment function, MemorySegment data, long numElements, MemorySegment shape, long numDims, MemorySegment resultType) {
        var mh$ = mlir_tosa_const_f32.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("mlir_tosa_const_f32", function, data, numElements, shape, numDims, resultType);
            }
            return (MemorySegment)mh$.invokeExact(function, data, numElements, shape, numDims, resultType);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class mlir_function_add_return {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            mlir_tosa_c_api_h.C_INT,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("mlir_function_add_return");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * MLIRResultCode mlir_function_add_return(MLIRFunctionHandle function, MLIRValueHandle *values, size_t numValues)
     * }
     */
    public static FunctionDescriptor mlir_function_add_return$descriptor() {
        return mlir_function_add_return.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * MLIRResultCode mlir_function_add_return(MLIRFunctionHandle function, MLIRValueHandle *values, size_t numValues)
     * }
     */
    public static MethodHandle mlir_function_add_return$handle() {
        return mlir_function_add_return.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * MLIRResultCode mlir_function_add_return(MLIRFunctionHandle function, MLIRValueHandle *values, size_t numValues)
     * }
     */
    public static MemorySegment mlir_function_add_return$address() {
        return mlir_function_add_return.ADDR;
    }

    /**
     * {@snippet lang=c :
     * MLIRResultCode mlir_function_add_return(MLIRFunctionHandle function, MLIRValueHandle *values, size_t numValues)
     * }
     */
    public static int mlir_function_add_return(MemorySegment function, MemorySegment values, long numValues) {
        var mh$ = mlir_function_add_return.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("mlir_function_add_return", function, values, numValues);
            }
            return (int)mh$.invokeExact(function, values, numValues);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class mlir_value_destroy {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            mlir_tosa_c_api_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("mlir_value_destroy");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void mlir_value_destroy(MLIRValueHandle value)
     * }
     */
    public static FunctionDescriptor mlir_value_destroy$descriptor() {
        return mlir_value_destroy.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void mlir_value_destroy(MLIRValueHandle value)
     * }
     */
    public static MethodHandle mlir_value_destroy$handle() {
        return mlir_value_destroy.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void mlir_value_destroy(MLIRValueHandle value)
     * }
     */
    public static MemorySegment mlir_value_destroy$address() {
        return mlir_value_destroy.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void mlir_value_destroy(MLIRValueHandle value)
     * }
     */
    public static void mlir_value_destroy(MemorySegment value) {
        var mh$ = mlir_value_destroy.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("mlir_value_destroy", value);
            }
            mh$.invokeExact(value);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class mlir_get_last_error {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            mlir_tosa_c_api_h.C_POINTER    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("mlir_get_last_error");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * const char *mlir_get_last_error()
     * }
     */
    public static FunctionDescriptor mlir_get_last_error$descriptor() {
        return mlir_get_last_error.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * const char *mlir_get_last_error()
     * }
     */
    public static MethodHandle mlir_get_last_error$handle() {
        return mlir_get_last_error.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * const char *mlir_get_last_error()
     * }
     */
    public static MemorySegment mlir_get_last_error$address() {
        return mlir_get_last_error.ADDR;
    }
